--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -36,7 +36,7 @@ label {
 }
 
 a {
-   color: #A90000;
+   color: #530605;
    text-decoration: none;
 }
 
@@ -50,7 +50,7 @@ a:focus {
   text-decoration: none;
 }
 a:hover {
-   color: #A90000;
+   color: #530605;
    text-decoration: underline;
 }
 
